<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_dark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/black"
        style="@style/MyCustomTheme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <kulmedslojd.hearinggame.GameView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/game_view"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_game"
            android:id="@+id/button_back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/point_button"
            android:layout_toStartOf="@+id/play"
            android:layout_alignTop="@+id/play"
            android:layout_alignBottom="@+id/play"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/play"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/holo_orange_light"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ok_square_1"
            android:visibility="invisible"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ok_square_1"
            android:scaleType="fitXY"
            android:visibility="invisible"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/red_wrong"
            android:visibility="invisible"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ok_square_right"
            android:scaleType="fitXY"
            android:visibility="invisible"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ok_square_right"
            android:visibility="invisible"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/red_wrong"
            android:visibility="invisible"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/encourageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encouring_message"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_centerInParent="true"
            android:background="@android:color/holo_blue_bright"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:padding="16dp"/>

    </RelativeLayout>

</LinearLayout>
